src/test/compile-fail/self-missing-method.rs
// error-pattern:expecting ., found (
fn main() {

  obj foo() {
      fn m() {
          self();
      }
  }

  auto a = foo;
  a.m();
}
